# Rapidshot

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  continuious_example.py  debug.info  diagnostic_script.py  pyproject.toml  rapidshot_diagnostics_results.txt  run_benchmark.py  run_test.bat  setup.py  test_benchmark.py  test_minimal.py  test_simple.py
.claude/: settings.local.json
.claude/agents/: ruff-error-resolver.md
.github/workflows/: python-build-matrix.yml
benchmarks/: bettercam_capture.py  bettercam_max_fps.py  d3dshot_max_fps.py  dxcam_capture.py  dxcam_max_fps.py  granular_performance_test.py  memory_pool_stress_test.py  mss_max_fps.py  rapidshot_capture.py  rapidshot_max_fps.py
docs/: diagnostic_console_patterns.md
examples/: capture_to_video.py  capture_to_video_dynamic.py  instant_replay.py
rapidshot/: __init__.py  capture.py  memory_pool.py  validate.py
rapidshot/_libs/: d3d11.py  dxgi.py
rapidshot/core/: __init__.py  device.py  duplicator.py  output.py  stagesurf.py
rapidshot/processor/: __init__.py  base.py  cupy_processor.py  numpy_processor.py  pillow_processor.py
rapidshot/util/: ctypes_helpers.py  errors.py  io.py  logging.py  timer.py
scripts/: recreate_venv.ps1  validate.sh
tests/: test_continuous_buffering.py  test_cupy_optional.py  test_diagnostic_cli.py  test_memory_pool.py  test_processor_error_handling.py  test_processor_return_type.py  test_region_mapping.py
