[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidshot"
dynamic = ["version"]
description = "A high-performance screencapture library for Windows using Desktop Duplication API"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = { text = "MIT" }
authors = [{ name = "RapidShot Contributors", email = "example@example.com" }]
keywords = [
  "screencapture",
  "desktop-duplication",
  "screen-recorder",
  "windows",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Capture",
  "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
  "numpy>=1.21.0",
  "comtypes>=1.1.14",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "ruff>=0.15.1",
]

[project.scripts]
validate = "rapidshot.validate:main"

[project.optional-dependencies]
cv2 = ["opencv-python>=4.8.0"]
pil = ["pillow>=10.0.0"]
examples = [
  "av>=12.0.0",
  "pynput>=1.7.7",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
]
benchmarks = [
  "bettercam>=1.0.0",
  "dxcam>=0.0.5",
  # `typed-d3dshot` is the maintained package that provides `import d3dshot`.
  # We avoid legacy `d3dshot` because it forces old pillow/comtypes versions.
  "typed-d3dshot[numpy]>=1.0.1",
  "mss>=10.1.0; python_version >= '3.9'",
  "mss>=9.0.1,<10.1.0; python_version < '3.9'",
]
gpu-cuda11 = ["cupy-cuda11x>=12.0.0", "opencv-python>=4.8.0"]
gpu-cuda12 = ["cupy-cuda12x>=12.0.0", "opencv-python>=4.8.0"]
# Compatibility aliases for existing installs.
gpu = ["cupy-cuda11x>=12.0.0", "opencv-python>=4.8.0"]
gpu_cuda12 = ["cupy-cuda12x>=12.0.0", "opencv-python>=4.8.0"]

[project.urls]
"Homepage" = "https://github.com/Zaatra/Rapidshot"
"Bug Reports" = "https://github.com/Zaatra/Rapidshot/issues"
"Source" = "https://github.com/Zaatra/Rapidshot"
"Documentation" = "https://github.com/Zaatra/Rapidshot"

[tool.setuptools.packages.find]
where = ["."]
include = ["rapidshot*"]

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
rapidshot = { workspace = true }

[dependency-groups]
dev = [
  "black>=24.8.0",
  "isort>=5.13.2",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pyright>=1.1.384",
]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
docs = [
  "sphinx>=7.4.0; python_version >= '3.9'",
  "sphinx-rtd-theme>=2.0.0; python_version >= '3.9'",
  "myst-parser>=3.0.0; python_version >= '3.9'",
]
